--- a/index.html
+++ b/index.html
@@ -346,17 +346,17 @@
     <a href="/social-hub" class="social-hub__view-more">View Full Social Hub</a>
   </section>
 
-  <!-- Footer Section -->
-  <footer>
+ <!-- Footer Section -->
+<footer>
     <div class="footer__links">
-      <a href="/terms" class="footer__link">Terms of Service</a>
-      <a href="/privacy" class="footer__link">Privacy Policy</a>
-      <a href="/contact" class="footer__link">Contact</a>
+        <a href="/terms-of-service.html" class="footer__link">Terms of Service</a>
+        <a href="/privacy-policy.html" class="footer__link">Privacy Policy</a>
+        <a href="/contact" class="footer__link">Contact</a>
     </div>
     <p class="footer__copyright">
-      &copy; <span id="year"></span> ZaraHive. All rights reserved.
+        &copy; <span id="year"></span> ZaraHive. All rights reserved.
     </p>
-  </footer>
+</footer>
 
   <!-- Optional JavaScript to auto-update the year in the footer -->
   <script>
